gke/restapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: managek8s
  #namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restbackend
  template:
    metadata:
      labels:
        app: restbackend
    spec:
      serviceAccountName: ${launchspark}
      containers:
      - name: managek8s-site
        image: us-central1-docker.pkg.dev/streamstatetest/streamstatetest/rest:v0.10.0
---
apiVersion: v1
kind: Service
metadata:
  name: restapiloadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: restbackend

# ---        
# apiVersion: v1
# kind: Service
# metadata:
#   name: restbackendservice
# spec:
#   type: NodePort
#   selector:
#     app: restbackend
#   ports:
#   - port: 80
#     targetPort: 8000
#     protocol: TCP
