gke/ingressmainspark.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubernetesingress
  annotations:
    # static IP
    kubernetes.io/ingress.global-static-ip-name: ipaddress-${organization}
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: restbackendservice
          servicePort: 80
